JupyterLab and spelling

--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -48,7 +48,7 @@ The dataset for the Qiskit HumanEval is expected to be open source soon.
 
 ## More information and citations
 
-To learn more about the Qiskit Code Assistant or the Qiskit HumanEval and cite it in your scientific publicatons, review these recommended citations:
+To learn more about the Qiskit Code Assistant or the Qiskit HumanEval and cite it in your scientific publications, review these recommended citations:
 
 ```
 @misc{2405.19495,
