--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -18,7 +18,7 @@ Learn how to install, use, configure, and uninstall the official Qiskit Code Ass
   <source src="/videos/guides/qiskit-code-assistant/demo-JupyterLab-t1t2-granite-8b-qiskit-short.mp4" type="video/mp4"></source>
 </video>
 
-## Installing the JupyterLab extension
+## Install the JupyterLab extension
 To install the [JupyterLab extension](https://github.com/Qiskit/qiskit-code-assistant-jupyterlab), run the following command from a terminal:
 ```sh
 pip install qiskit-code-assistant-jupyterlab
@@ -35,6 +35,24 @@ The extension loads automatically and is listed on the bottom of the JupyterLab 
 ![Screenshot of the bar on the bottom of JupyterLab.](/images/run/qiskit-code-assistant/jupyterlab-selected-model.png)
 
 For help working with JupyterLab, refer to the [JupyterLab documentation.](https://jupyterlab.readthedocs.io/en/latest/)
+
+## Configure extension settings
+
+It is recommended that you edit the following JupyterLab settings by going Settings > Settings Editor:
+
+- Click **Inline Completer**, find "Show widget" and choose **Always**.  This means that the the inline completer widget will always be shown so you can cycle through and select a completion item.
+
+- Click **Code Completion** and increase the value for "Default timeout for a provider." to `10000` or 10 seconds. The default value is 1 second, but the Qiskit Code Assistant API might take longer than this to find a suggstion. This setting only applies to the standard context menu that is invoked with `Tab`. The inline completer has a default of 10 seconds.
+
+Other settings you might want to change:
+
+- Keyboard shortcuts can be changed from Settings > Settings Editor > Keyboard Shortcuts.
+
+- You can change the IBM Quantum API token to use in the JupyterLab command palette. To do that, type `Alt + Shift + C`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste in your token.
+
+- [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, edit the Qiskit Code Assistant `serviceUrl` setting.
+
+- [Advanced] Keyboard shortcuts can be changed by searching for `completer` in the Keyboard Shortcuts settings (Settings > Settings Editor > Keyboard Shortcuts) and adding new shortcuts for the relevant commands.
 
 ## Get started using the Qiskit Code Assistant extension for JupyterLab
 
@@ -75,31 +93,10 @@ The context menu includes suggestions from JupyterLab in addition to the Qiskit 
 
 ![The context menu is shown, with suggested code from Qiskit, as well as suggestions from JupyterLab.](/images/run/qiskit-code-assistant/jupyterlab-tab-complete.png)
 
-## Configuring extension settings
+## Uninstall the JupyterLab extension
 
 
-There are a few settings we recommend to edit in your user settings in JupyteLab.
-
-1. Inline Completer `showWidget` can be set to `always` in order to always show the inline completer widget to cycle through and select a completion item
-
-2. Code Completion `providerTimeout` can be increased, our suggested value is `10000` or 10 seconds. This is 1 second by default and the Qiskit Code Assistant API may take a bit more than 1 second to return a response. This setting only apply the the standard completer that is invoked with `Tab`, the inline completer has a default of 10 seconds.
-
-
-Other configurations available:
-
-1. Keyboard shortcuts can be changed via the JupyterLab Keyboard Shortcuts settings (`Settings` menu -> `Settings editor` -> `Keyboard shortcuts`)
-
-2. You can change the IBM Quantum API token to use via the JupyterLab command palette. To do that, type `Alt+Shift+C`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, paste your IBM Quantum API token.
-
-2. [Advanced] If you want to change the instance of the Qiskit Code Assistant Service that the extension should use you can edit the Qiskit Code Assistant setting `serviceUrl`
-
-3. [Advanced] Keyboard shortcuts can be changed by searching for `completer` in the Keyboard Shortcuts settings and adding new shortcuts for the relevant commands.
-
-
-## Uninstalling the JupyterLab extension
-
-
-To remove the Qiskit Code Assistant extension from JupyterLab, execute:
+To remove the Qiskit Code Assistant extension from JupyterLab, run:
 
 ```bash
 pip uninstall qiskit_code_assistant_jupyterlab
@@ -107,7 +104,7 @@ pip uninstall qiskit_code_assistant_jupyterlab
 
 ## Troubleshooting
 
-If you are seeing the frontend extension, but it is not working, check that the server
+If you are seeing the frontend extension but it is not working, check that the server
 extension is enabled:
 
 ```bash
@@ -124,12 +121,10 @@ jupyter labextension list
 
 ## Contribute to the JupyterLab extension
 
-The code for this official extension is publicly available and open source. Check it out in <https://github.com/Qiskit/qiskit-code-assistant-jupyterlab>
-
-
+The code for this extension is publicly available and open source. Check it out in [github.](https://github.com/Qiskit/qiskit-code-assistant-jupyterlab)
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Check out examples on how to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configure error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), [transpile with passmanagers](transpile-with-pass-managers)
+    - Check out examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
 </Admonition>
