--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -54,20 +54,20 @@ By default, the extension uses the `granite-8b-qiskit` model, which is listed in
 
 ![The bottom status bar is shown, with `granite-8b-qiskit` listed.](/images/guides/qiskit-code-assistant/vscode-selected-model.png)
 
-The first time you use the `granite-8b-qiskit` model a modal opens, listing some major restrictions that you should be aware of when using the model. Clicking `Accept` will accept the disclaimer and enable the model for code generation.
+The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Clicking `Accept` will accept the disclaimer and enable the model for code generation.
 
 ![The window that opens upon first use contains restrictions tha must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
 
 ### Generate Code
-After accepting the EULA you can open a new file and start coding. To get a code suggestion, type `Ctrl+.` as shown:
+After accepting the EULA, you can open a new file and start coding. To get a code suggestion, type `Ctrl` + `.` as shown:
 
 ![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
 
 Press `Tab` to accept the model-generated suggestion or press `ESC` to reject it.
 
 <Admonition type="tip" title="Tips for working with code suggestions">
-- Type `Ctrl+.` again to generate additional suggestions.
-- When a suggestion is shown, you can use `Alt/Option+]` and `Alt/Option+[` to cycle forward and backward, respectively, through the suggestions (if available).
+- Type `Ctrl` + `.` again to generate additional suggestions.
+- When a suggestion is shown, you can use `Alt/Option` + `]` and `Alt/Option + `[` to cycle forward and backward, respectively, through the suggestions (if available).
 - You can hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
   ![The toolbar that pops up if you hover over suggested code is shown.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
 </Admonition>
@@ -88,9 +88,9 @@ If you are not seeing the extension status bar in VSCode, check that the extensi
 
 If the extension is installed and enabled, but cannot select a model, verify that your current API Token has been added and the `Qiskit Code Assistant: Url` is properly set.
 
-## Contribute to the JupyterLab extension
+## Contribute to the VSCode extension
 
-The code for this official extension is publicly available and open source. Check it out in [github.](https://github.com/Qiskit/qiskit-code-assistant-jupyterlab)
+The code for this official extension is publicly available and open source. Check it out in [github.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
 
 
 ## Next steps
