Examples won't be live on Monday.  Will add back in as an update

--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -71,6 +71,5 @@ Eprint = {arXiv:2406.14712},
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Install and use the official [JupyterLab](/guides/qiskit-code-assistant-jupyterlab) or [VSCode](/guides/qiskit-code-assistant-vscode) extensions.
-    - Follow examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
+  Install and use the official [JupyterLab](/guides/qiskit-code-assistant-jupyterlab) or [VSCode](/guides/qiskit-code-assistant-vscode) extensions.
 </Admonition>
