Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -63,7 +63,7 @@ After accepting the EULA, you can open a new file and start coding. To get a cod
 
 ![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
 
-Press `Tab` to accept the model-generated suggestion or press `ESC` to reject it.
+Press the `Tab` key to accept the model-generated suggestion or press the `ESC` key to reject it.
 
 <Admonition type="tip" title="Tips for working with code suggestions">
 - Type `Ctrl` + `.` again to generate additional suggestions.
