Copy over content

--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -62,6 +62,20 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
 * [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources)
 * [Port code to Qiskit Serverless](./serverless-port-code)
 
+### Qiskit Functions
+
+[Qiskit Functions](/guides/functions) abstract away parts of the quantum software development workflow, and in the case of the application functions, they cover all the Qiskit patterns steps.
+
+- [Introduction to Qiskit Functions](/guides/functions)
+- Circuit functions:
+  - [IBM Circuit function](/guides/ibm-circuit-function)
+  - [Algorithmiq Tensor Error Mitigation](/guides/algorithmiq-tem)
+  - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
+  - [QEDMA QESEM](/guides/qedma-qesem)
+- Application functions:
+  - [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
+  - [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
+
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
