--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -251,7 +251,7 @@
             "id": "a6bfaf53",
             "metadata": {},
             "source": [
-                "You can use the familiar [Qiskit Serverless APIs](./qiskit-serverless) to check your Qiskit Function workload's status:"
+                "You can use the familiar [Qiskit Serverless APIs](./serverless) to check your Qiskit Function workload's status:"
             ]
         },
         {
@@ -422,7 +422,7 @@
             "id": "c07af9d0",
             "metadata": {},
             "source": [
-                "You can use the familiar [Qiskit Serverless APIs](./qiskit-serverless) to check your Qiskit Function workload's status:"
+                "You can use the familiar [Qiskit Serverless APIs](./serverless) to check your Qiskit Function workload's status:"
             ]
         },
         {
