--- a/docs/api/qiskit-ibm-transpiler/utils.mdx
+++ b/docs/api/qiskit-ibm-transpiler/utils.mdx
@@ -20,7 +20,7 @@ python_api_name: qiskit_ibm_transpiler.utils
 
 ### create\_random\_linear\_function
 
-<Function id="qiskit_ibm_transpiler.utils.create_random_linear_function" signature="qiskit_ibm_transpiler.utils.create_random_linear_function(n_qubits, seed=123)">
+<Function id="qiskit_ibm_transpiler.utils.create_random_linear_function" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.6/qiskit_ibm_transpiler/utils.py#L54-L59" signature="qiskit_ibm_transpiler.utils.create_random_linear_function(n_qubits, seed=123)">
   **Parameters**
 
   *   **n\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) –
@@ -33,7 +33,7 @@ python_api_name: qiskit_ibm_transpiler.utils
 
 ### get\_metrics
 
-<Function id="qiskit_ibm_transpiler.utils.get_metrics" signature="qiskit_ibm_transpiler.utils.get_metrics(qc)">
+<Function id="qiskit_ibm_transpiler.utils.get_metrics" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.6/qiskit_ibm_transpiler/utils.py#L38-L46" signature="qiskit_ibm_transpiler.utils.get_metrics(qc)">
   Returns a dict with metrics from a QuantumCircuit
 
   **Parameters**
