--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectPermutations.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectPermutations.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
 # CollectPermutations
 
-<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/main/qiskit_ibm_transpiler/ai/collection.py#L303-L340" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.6/qiskit_ibm_transpiler/ai/collection.py#L303-L340" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
   Collects blocks of SWAP circuits as Permutations.
