--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a47ac9aa-4bb9-4240-806e-9beabfd2dda2",
    "metadata": {},
    "source": [
     "# Introduction to Qiskit Functions\n",
@@ -13,12 +14,13 @@
     "\n",
     "| Type | What does it do? | Example inputs and outputs | Who is it for? |\n",
     "| - | - | - | - |\n",
-    "| Circuit function | Simplified interface for running circuits. Abstracts transpilation, error suppression, error mitigation | **Input**: Abstract `PUB`s <br/> **Output**: Mitigated expectation values | Researchers using Qiskit to discover new algorithms and applications, without needing to focus on optimizing for hardware or handling error. Circuit functions can be used to build custom application functions. | \n",
-    "| Application function | Covers higher-level tasks, like exploring algorithms and domain-specific use cases. Abstracts quantum workflow to solve tasks, with classical inputs and outputs | **Input**: Molecules, graphs <br/> **Output**: Energy, cost | Researchers in non-quantum domains, integrating quantum into existing large-scale classical workflows, without needing to map classical data to quantum circuits. | "
+    "| Circuit function | Simplified interface for running circuits. Abstracts transpilation, error suppression, error mitigation | **Input**: Abstract `PUB`s <br/> **Output**: Mitigated expectation values | Researchers using Qiskit to discover new algorithms and applications, without needing to focus on optimizing for hardware or handling error. Circuit functions can be used to build custom application functions. |\n",
+    "| Application function | Covers higher-level tasks, like exploring algorithms and domain-specific use cases. Abstracts quantum workflow to solve tasks, with classical inputs and outputs | **Input**: Molecules, graphs <br/> **Output**: Energy, cost | Researchers in non-quantum domains, integrating quantum into existing large-scale classical workflows, without needing to map classical data to quantum circuits. |"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "df18227b-787a-4dc6-a8c7-7abd0f67110c",
    "metadata": {},
    "source": [
     "Functions are provided by IBM&reg; and third-party partners. Each is performant for specific workload characteristics and have unique performance-tuning options. Premium Plan users can get started with IBM Qiskit Functions for free, or procure a license from one of the partners who have contributed a function to the catalog.\n",
@@ -37,6 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "be135691-adee-4a1c-98bf-e76deb12319f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42843fcd-1779-4a74-8d6a-7d00c22e374e",
    "metadata": {},
    "source": [
     "Optionally, you can use the `save_account()` method to save your credentials for easy access later on, before initializing the service. This saves your credentials in the same place as `QiskitRuntimeService.save_account()`, so you can skip this step if you had previously used `QiskitRuntimeService` to save your account. *Note that account credentials are saved in plain text, so only do so if you are using a trusted device.*"
@@ -55,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "54fc48c8-3a65-478c-9bc3-ec6eb4db425a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +71,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5154cbea-ccfa-42ea-a9ef-c31699c3b2c0",
    "metadata": {},
    "source": [
     "Once you have authenticated, you can list the functions from the Qiskit Functions Catalog that you have access to:"
@@ -74,6 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "55b73ad8-6e3b-4b76-8ba5-ae7ea339ffcc",
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1c73799-30ec-44dc-b4b9-06e59d521d8c",
    "metadata": {},
    "source": [
     "### Run enabled functions\n",
@@ -100,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "4ac22236-2a34-46fb-890f-30d6ba70081e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +117,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "deb844d3-051a-4db1-b0a1-4ba9801ef95e",
    "metadata": {},
    "source": [
     "Each Qiskit Function has custom inputs, options, and outputs. Check the specific documentation pages for the function you want to run for more information. By default, all users can only run one function job at a time:"
@@ -116,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "9b9a7a3c-cc98-4c19-93cd-f59793515c70",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +139,7 @@
    ],
    "source": [
     "job = ibm_cf.run(\n",
-    "    instance=..., \n",
+    "    instance=...,\n",
     "    pubs=[],\n",
     "    backend=\"backend_name\"\n",
     ")\n",
@@ -138,6 +149,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1518e8e-04ea-4e4e-9f30-10f87dd4ee82",
    "metadata": {},
    "source": [
     "### Check job status\n",
@@ -150,13 +162,14 @@
     "\n",
     "- **`QUEUED`**: The remote program is in the Qiskit Function queue. The queue priority is based on how much you've used Qiskit Functions.\n",
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies.\n",
-    "- **`RUNNING`**: The program is running. \n",
+    "- **`RUNNING`**: The program is running.\n",
     "- **`DONE`**: The program is complete, and you can retrieve data stored in `save_result()` with `job.results()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "d811be20-cf0d-4070-a126-b40af6a33132",
    "metadata": {},
    "outputs": [
     {
@@ -173,6 +186,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e6528b5-c36f-48e1-bb2f-2416ccb12902",
    "metadata": {},
    "source": [
     "### Retrieve results\n",
@@ -183,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "04f6a446-fbc6-438a-bc07-00fc9d551d83",
    "metadata": {},
    "outputs": [
     {
@@ -207,6 +222,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76c32136-f449-454c-896b-ff9d0edf9abc",
    "metadata": {},
    "source": [
     "At any time, you can also cancel a job:"
@@ -215,6 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "7ddc2394-64a9-4fdd-bb3d-7729433fcd9c",
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +248,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b5d7c8d-7a96-41e2-93aa-528513acdd21",
    "metadata": {},
    "source": [
     "### List previously run jobs run with Qiskit Functions\n",
@@ -241,6 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "c1a2832b-1ca3-4ef1-9a8a-3f3804b3aedf",
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +280,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c8c3e5d-1de2-4fed-be03-d134dc3fd907",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -277,7 +297,7 @@
  "metadata": {
   "description": "Explore IBM Qiskit Functions Catalog, abstracted circuit function and application function services designed to accelerate research and application prototyping.",
   "kernelspec": {
-   "display_name": "qiskit_1-0_scratch_space-fyWgEqUn-py3.11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3"
   },
   "title": "Introduction to Qiskit Functions"
  },
