--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -61,13 +61,13 @@
     "**Result dictionary contents:**\n",
     "| Name    | Type | Description |\n",
     "| ---------  | ---------------- | -------------------------- |\n",
-    "| solution_bitstring_cost  | `float`              | The best minimum cost across all iterations        | \n",
-    "| final_bitstring_distribution  | `CountsDict`              | The bitstring counts dictionary associated with the minimum cost        | \n",
-    "| solution_bitstring | `str`              | Bitstring with the best cost in the final distribution         | \n",
-    "| iteration_count  | `int`              | The total number of QAOA iterations performed by the Solver        | \n",
-    "| variables_to_bitstring_index_map  | `float`              | The mapping from the variables to the equivalent bit in the bitstring       | \n",
-    "| best_parameters  | `list[float]`            | The optimized beta and gamma parameters across all iterations  | \n",
-    "| warnings  |`list[str]`              | The warnings produced while compiling or running QAOA (defaults to None)   | "
+    "| solution_bitstring_cost  | `float`              | The best minimum cost across all iterations        |\n",
+    "| final_bitstring_distribution  | `CountsDict`              | The bitstring counts dictionary associated with the minimum cost        |\n",
+    "| solution_bitstring | `str`              | Bitstring with the best cost in the final distribution         |\n",
+    "| iteration_count  | `int`              | The total number of QAOA iterations performed by the Solver        |\n",
+    "| variables_to_bitstring_index_map  | `float`              | The mapping from the variables to the equivalent bit in the bitstring       |\n",
+    "| best_parameters  | `list[float]`            | The optimized beta and gamma parameters across all iterations  |\n",
+    "| warnings  |`list[str]`              | The warnings produced while compiling or running QAOA (defaults to None)   |"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "\n",
     "The \"Number of qubits\" indicated is not a hard limitation but represents rough thresholds where you can expect extremely consistent solution accuracy. Larger problem sizes have been successfully solved, and testing beyond these limits is encouraged.\n",
     "\n",
-    "Arbitrary qubit connectivity is supported across all problem types. \n",
+    "Arbitrary qubit connectivity is supported across all problem types.\n",
     "\n",
     "| Problem type    | Number of qubits | Example | Accuracy | Total time (s) | Runtime usage (s) | Number of iterations\n",
     "| ---------  | ---------------- | -------------------------- | -------- | ---------- | ------------- |---- |\n",
@@ -415,7 +415,7 @@
    "id": "9d01684b",
    "metadata": {},
    "source": [
-    "Now every edge in the graph should include at least one end point from the cover, which can be expressed as the inequality: \n",
+    "Now every edge in the graph should include at least one end point from the cover, which can be expressed as the inequality:\n",
     "\n",
     "$$n_i + n_j \\ge 1 \\texttt{ for all } (i,j)\\in E$$\n",
     "\n",
@@ -539,7 +539,7 @@
  "metadata": {
   "description": "Start solving utility-scale optimization problems with the Fire Opal Optimization Solver by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3"
   },
   "title": "Optimization Solver - A Qiskit Function by Q-CTRL Fire Opal"
  },
