--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -69,7 +69,7 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
 - [Introduction to Qiskit Functions](/guides/functions)
 - Circuit functions:
   - [IBM Circuit function](/guides/ibm-circuit-function)
-  - [Algorithmiq Tensor Error Mitigation](/guides/algorithmiq-tem)
+  - [Algorithmiq Tensor-network error mitigation](/guides/algorithmiq-tem)
   - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
   - [QEDMA QESEM](/guides/qedma-qesem)
 - Application functions:
